<resources>
    <string name="app_name" translatable="false">CONTROLprest</string>
    <string name="hint_pseudo" translatable="false">Pseudo</string>
    <string name="hint_password">Password</string>
    <string name="tag_new" translatable="false">new</string>
    <string name="btn_connexion" translatable="false">CONNEXION</string>
    <string name="lbl_rgpd" translatable="false">J\'ai lu et j\'accepte les conditions de protection des données personnelles</string>
    <string name="tag_robot" translatable="false">robot</string>
    <string name="btn_requet_robot" translatable="false">J\'ai oublié de me déconnecter</string>
    <string name="tag_mail" translatable="false">mail</string>
    <string name="btn_requet_mail" translatable="false">J\'ai oublié mes identifiants</string>
    <string name="btn_deco" translatable="false">DECONNEXION</string>
    <string name="mess_conextion_lost" translatable="false">Récupérez un connection</string>
    <string name="mess_echec_conexion" translatable="false">Connexion failed</string>
    <string name="mess_err_rgpd" translatable="false">Vous devez accepter les conditions de protection des données personnelles pour continuer</string>
    <string name="mess_err_conex" translatable="false">Saisissez votre pseudo et votre mot de passe pour continuer</string>
    <string name="mess_bad_permission_internet" translatable="false">Vous ne pouvez utiliser l\'application sans accès au réseau</string>
    <string name="mess_bad_permission_camera">You can\'t use camera without permission</string>
    <string name="mess_bad_permission_write" translatable="false">Vous ne pouvez enregistrer les prise de vue sans permission</string>
    <string name="hint_get_mail" translatable="false">Entrez votre adresse de contact</string>
    <string name="btn_valid">Validate</string>
    <string name="btn_send">Send</string>
    <string name="mess_unlock_acces">Unlock access</string>
    <string name="mess_get_identifient">Get your identifiers</string>
    <string name="mess_mail_send">A mail was sent to</string>
    <string name="lbl_selection">Select</string>
    <string name="_prev" translatable="false"><![CDATA[<]]></string>
    <string name="hint_search">Search an entry</string>
    <string name="lbl_agc">Agency</string>
    <string name="lbl_grp">Groupment</string>
    <string name="lbl_rsd">Residence</string>
    <string name="btn_controler" translatable="false">CONTROL</string>
    <string name="btn_commencer">Start</string>
    <string name="lbl_select_entry">Select an entry</string>
    <string name="lbl_hebdomadaire">Weekly</string>
    <string name="lbl_mensuel">Monthly</string>
    <string name="lbl_trimestriel" translatable="false">Trimestriel</string>
    <string name="lbl_semestriel" translatable="false">Semestriel</string>
    <string name="lbl_annuel">Yearly</string>
    <string name="hint_name_rsd">Name</string>
    <string name="hint_ref_rsd">Reference</string>
    <string name="hint_entry_rsd">Entry</string>
    <string name="hint_adr_rsd">Address</string>
    <string name="btn_finish">Finish</string>
    <string name="hint_icon" translatable="false">icon</string>
    <string name="lbl_zone" translatable="false">Zone</string>
    <string name="lbl_point" translatable="false">Point</string>
    <string name="btn_no">Not conform</string>
    <string name="hint_point" translatable="false">Point</string>
    <string name="btn_yes">Conform</string>
    <string name="lbl_comment">Comment</string>
    <string name="btn_save">Save</string>
    <string name="btn_capture" translatable="false">Capture</string>
    <string name="lbl_prise_de_vue" translatable="false">Capture</string>
    <string name="lbl_sign" translatable="false">Signature</string>
    <string name="lbl_finish">End of control</string>
    <string name="lbl_send">Send</string>
    <string name="btn_clear">Clear</string>
    <string name="hint_dest">To</string>
    <string name="hint_message">Your message</string>
    <string name="mess_echec_act" translatable="false">Echec</string>
    <string name="lbl_urgence" translatable="false">Urgence</string>
    <string name="hint_comment">Enter your comment here</string>
    <string name="lbl_info" translatable="false">\?</string>
    <string name="lbl_bad_version" translatable="false">Une nouvelle version est disponible.\nMettez à jour votre application pour continuer.</string>
    <string name="mess_comment_bad" translatable="false">Vous devez laisser un commentaire.</string>
    <string name="lbl_img" translatable="false">Désordre technique</string>
    <string name="mess_use_finish">Use END button</string>
    <string name="btn_next">Next</string>
    <string name="_dest" translatable="false">Destinataire</string>
    <string name="entry_lbl" translatable="false">Entrée :</string>
    <string name="adresse_lbl" translatable="false">Adresse :</string>
    <string name="last_ctrl_lbl" translatable="false">dernier contrôle :</string>
    <string name="lbl_write_nfs">To write</string>
    <string name="lbl_load_nfs">Loaded</string>
    <string name="mess_bad_nfc">You can\'t use this app without NFC service activated</string>
    <string name="txt_close_tag">Tag successfully programmed. Tap to close.</string>
    <string name="txt_wait_tag">Put tag to proceed.</string>
    <string name="mess_timeout">Request timeout</string>
    <string name="un_message_a_t_envoy">A message has been sent</string>
    <string name="erreur_de_communication_avec_le_serveur">Communication error with the server</string>
    <string name="erreur_lors_de_l_envoi_de_la_demande">Error while sending the request</string>
    <string name="une_erreur_est_survenue_lors_de_l_initialisation">An error occurred during initialization</string>
    <string name="veuillez_entrer_une_adresse_email">Please enter an email address</string>
    <string name="veuillez_entrer_une_adresse_email_valide">Please enter a valid email address</string>
    <string name="erreur_lors_du_traitement_de_la_r_ponse">Error while processing the response</string>
    <string name="selectionner_une_entree">SELECT AN ENTRY</string>
    <string name="erreur_lors_de_l_initialisation_de_l_application">Error during application initialization</string>
    <string name="erreur_lors_du_d_marrage_de_l_application">Error while starting the application</string>
    <string name="erreur_lors_du_traitement_des_r_sultats_de_permission">Error while processing permission results</string>
    <string name="erreur_lors_du_traitement_de_l_action">Error while processing the action</string>
    <string name="erreur_lors_de_la_v_rification_des_permissions">Error while checking permissions</string>
    <string name="une_tentative_de_connexion_est_d_j_en_cours">A connection attempt is already in progress</string>
    <string name="erreur_d_encodage_des_param_tres">Error encoding parameters</string>
    <string name="erreur_lors_de_la_tentative_de_connexion">Error during connection attempt</string>
    <string name="erreur_lors_de_la_connexion">Error during connection</string>
    <string name="une_op_ration_est_d_j_en_cours">An operation is already in progress</string>
    <string name="erreur_lors_de_la_d_connexion">Error during disconnection</string>
    <string name="erreur_lors_de_la_r_initialisation_des_pr_f_rences">Error while resetting preferences</string>
    <string name="erreur_lors_de_l_ouverture_de_l_cran_de_demande">Error while opening the request screen</string>
    <string name="impossible_d_ouvrir_la_page_web">Unable to open the web page</string>
    <string name="r_ponse_invalide_du_serveur">Invalid server response</string>
    <string name="r_ponse_incompl_te_du_serveur">Incomplete server response</string>
    <string name="format_de_r_ponse_invalide">Invalid response format</string>
    <string name="erreur_lors_du_traitement_du_r_sultat">Error while processing the result</string>
    <string name="erreur_lors_de_la_fermeture_de_l_application">Error while closing the application</string>
    <string name="mise_jour_annul_e_par_l_utilisateur">Update canceled by user</string>
    <string name="chec_de_la_mise_jour_l_application_continuera_avec_la_version_actuelle">Update failed, the application will continue with the current version</string>
    <string name="erreur_lors_du_traitement_du_r_sultat_de_mise_jour">Error while processing update result</string>
    <string name="erreur_lors_de_la_v_rification_du_nfc">Error while checking NFC</string>
    <string name="une_v_rification_de_mise_jour_est_d_j_en_cours">An update check is already in progress</string>
    <string name="r_cup_rez_une_connexion_pour_utiliser_l_application">Please restore your connection to use the application</string>
    <string name="erreur_lors_de_la_v_rification_de_mise_jour">Error while checking for updates</string>
    <string name="application_non_install_e_depuis_le_play_store_aucune_v_rification_de_mise_jour">Application not installed from Play Store, no update check</string>
    <string name="erreur_lors_de_la_v_rification_des_mises_jour">Error while checking for updates</string>
    <string name="erreur_lors_de_la_v_rification_de_la_source_d_installation">Error while checking installation source</string>
    <string name="erreur_lors_de_l_affichage_du_message_d_erreur">Error while displaying error message</string>
    <string name="donn_es_d_entr_e_invalides">Invalid input data</string>
    <string name="type_de_s_lection_invalide">Invalid selection type</string>
    <string name="erreur_lors_de_l_initialisation">Error during initialization</string>
    <string name="type_de_s_lection_inconnu">Unknown selection type</string>
    <string name="aucune_agence_disponible">No agency available</string>
    <string name="incoh_rence_dans_les_donn_es_d_agences">Inconsistency in agency data</string>
    <string name="chec_de_l_inflation_de_la_vue_d_agence">Failed to inflate agency view</string>
    <string name="textview_non_trouv_dans_la_vue_d_agence">TextView not found in agency view</string>
    <string name="tag_null_lors_du_clic_sur_une_agence">Null tag when clicking on an agency</string>
    <string name="erreur_lors_de_la_s_lection">Error during selection</string>
    <string name="erreur_lors_de_l_ajout_de_la_vue_d_agence_au_layout">Error while adding agency view to layout</string>
    <string name="erreur_lors_de_la_cr_ation_de_la_vue">Error while creating view</string>
    <string name="erreur_lors_du_chargement_des_agences">Error while loading agencies</string>
    <string name="aucun_groupement_disponible">No group available</string>
    <string name="incoh_rence_dans_les_donn_es_de_groupements">Inconsistency in group data</string>
    <string name="chec_de_la_construction_de_la_vue_de_groupement">Failed to build group view</string>
    <string name="tag_null_lors_du_clic_sur_un_groupement">Null tag when clicking on a group</string>
    <string name="erreur_lors_du_chargement_des_groupements">Error while loading groups</string>
    <string name="aucune_r_sidence_disponible">No residence available</string>
    <string name="incoh_rence_dans_les_donn_es_de_r_sidences">Inconsistency in residence data</string>
    <string name="un_ou_plusieurs_textview_manquants_dans_la_vue_de_r_sidence">One or more TextView missing in residence view</string>
    <string name="tag_null_lors_du_clic_sur_une_r_sidence">Null tag when clicking on a residence</string>
    <string name="erreur_lors_de_l_ajout_de_la_vue_de_r_sidence_au_layout">Error while adding residence view to layout</string>
    <string name="erreur_lors_de_la_cr_ation_de_l_l_ment_de_r_sidence">Error while creating residence element</string>
    <string name="erreur_lors_du_chargement_des_r_sidences">Error while loading residences</string>
    <string name="erreur_lors_de_la_fermeture_de_l_activit">Error while closing activity</string>
    <string name="erreur_d_initialisation">Initialization error</string>
</resources>