<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controllers.activities.SelectActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/fond_vertical_green">

    <RelativeLayout android:id="@+id/select_activity_title_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_activity_search_lyt"

        android:background="@color/teal_500" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:padding="20dp"

            android:textSize="30sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/lbl_selection" />

        <TextView android:id="@+id/select_activity_prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:onClick="selectActivityActions"
            android:tag="cancel"
            android:text="@string/_prev"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <ImageView android:id="@+id/search_activity_deco_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:onClick="selectActivityActions"
            android:tag="off"
            android:src="@drawable/bouton_deconnecter_blanc" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/select_activity_search_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/select_activity_title_lyt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_activity_select_lyt"
        app:layout_constraintLeft_toLeftOf="parent" >

        <EditText android:id="@+id/select_activity_search_input"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/hint_search"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textSize="24sp" />

        <ImageView android:id="@+id/select_activity_search_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="selectActivityActions"
            android:tag="search"
            android:src="@drawable/icon_loupe_green" />

    </RelativeLayout>

    <ScrollView android:id="@+id/select_activity_select_lyt"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/select_activity_search_lyt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_activity_start_btn"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <FrameLayout android:id="@+id/select_activity_agc_blk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"

                android:tag="agc"
                android:onClick="selectActivityActions">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"

                    android:onClick="selectActivityActions"
                    android:tag="agc">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"

                        android:layout_marginStart="25dp"

                        android:src="@drawable/agence_green"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"

                        android:textColor="@color/teal_500"
                        android:textSize="20sp"
                        android:text="@string/lbl_agc"/>

                </RelativeLayout>

                <pl.droidsonroids.gif.GifImageView android:id="@+id/select_activity_wait_agc_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:layout_marginTop="10dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:elevation="10dp"

                    android:src="@drawable/load"
                    android:visibility="invisible"/>

            </FrameLayout>

            <TextView android:id="@+id/select_activity_agc_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginStart="80dp"

                android:onClick="selectActivityActions"
                android:tag="agc"/>

            <FrameLayout android:id="@+id/select_activity_grp_blk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"

                android:onClick="selectActivityActions"
                android:tag="grp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"

                        android:layout_marginStart="25dp"

                        android:src="@drawable/groupement_residences_green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"

                        android:textColor="@color/teal_500"
                        android:textSize="20sp"
                        android:text="@string/lbl_grp"/>

                </RelativeLayout>

                <pl.droidsonroids.gif.GifImageView android:id="@+id/select_activity_wait_grp_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:layout_marginTop="10dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:elevation="10dp"

                    android:src="@drawable/load"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView android:id="@+id/select_activity_grp_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginStart="80dp"

                android:onClick="selectActivityActions"
                android:tag="grp"/>

            <FrameLayout android:id="@+id/select_activity_rsd_blk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"

                android:onClick="selectActivityActions"
                android:tag="rsd">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"

                        android:layout_marginStart="25dp"

                        android:src="@drawable/residence_green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"

                        android:textColor="@color/teal_500"
                        android:textSize="20sp"
                        android:text="@string/lbl_rsd"/>

                </RelativeLayout>

                <pl.droidsonroids.gif.GifImageView android:id="@+id/select_activity_wait_rsd_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:elevation="10dp"
                    android:src="@drawable/load"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView android:id="@+id/select_activity_rsd_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginStart="80dp"

                android:onClick="selectActivityActions"
                android:tag="rsd"/>

        </LinearLayout>

    </ScrollView>

    <FrameLayout android:id="@+id/select_activity_next_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/select_activity_select_lyt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="10dp">

        <Button android:id="@+id/select_activity_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp"

            android:onClick="selectActivityActions"
            android:tag="go"

            android:background="@drawable/button_selected"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/btn_next" />

        <pl.droidsonroids.gif.GifImageView android:id="@+id/select_activity_wait_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:elevation="10dp"
            android:src="@drawable/load"
            android:visibility="invisible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>